updated json package

--- a/week-4/json-api/package.json
+++ b/week-4/json-api/package.json
@@ -3,6 +3,7 @@
     "author": "Leon Maxwell",
     "private": true,
     "dependencies": {
-        "express": "^4.16.3"
+        "express": "^4.16.3",
+        "morgan": "^1.9.0"
     }
 }
