--- a/ems/package.json
+++ b/ems/package.json
@@ -1,21 +1,22 @@
 {
-    "name": "ems",
-    "author": "Leon Maxwell",
-    "private": true,
-    "dependencies": {
-        "body-parser": "^1.18.3",
-        "cookie-parser": "^1.4.3",
-        "csurf": "^1.9.0",
-        "ejs": "^2.6.1",
-        "express": "^4.16.3",
-        "helmet": "^3.13.0",
-        "mongoose": "^5.2.13",
-        "morgan": "^1.9.0"
-    },
-    "scripts": {
-        "start": "node app.js"
-    },
-    "engines": {
-        "node": "10.10.x"
-    }
+  "name": "ems",
+  "author": "Leon Maxwell",
+  "private": true,
+  "dependencies": {
+    "body-parser": "^1.18.3",
+    "cookie-parser": "^1.4.3",
+    "csurf": "^1.9.0",
+    "ejs": "^2.6.1",
+    "express": "^4.16.3",
+    "express-session": "^1.15.6",
+    "helmet": "^3.13.0",
+    "mongoose": "^5.2.13",
+    "morgan": "^1.9.0"
+  },
+  "scripts": {
+    "start": "node app.js"
+  },
+  "engines": {
+    "node": "8.12.0"
+  }
 }
